tests/expectations/compiler/integers/i64/no_space_between_literal.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found 'i64'
    --> compiler-test:4:15
     |
   4 |     let i = 1 i64;
     |               ^^^
